--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,9 @@
   "compilerOptions": {
     "types": ["vitest/globals"],
   },
+  "include": [
+    "types/**/*",
+    // 他の必要なファイルやディレクトリ...
+  ],
   "exclude": ["node_modules/"]
 }
