--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.10.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
@@ -20,21 +21,21 @@
   "devDependencies": {
     "@nuxtjs/storybook": "7.0.0",
     "@storybook-vue/nuxt": "0.2.1",
-    "@storybook/addon-essentials": "^7.6.13",
-    "@storybook/addon-interactions": "^7.6.13",
-    "@storybook/addon-links": "^7.6.13",
-    "@storybook/addon-mdx-gfm": "^7.6.13",
-    "@storybook/blocks": "^7.6.13",
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-links": "^7.6.14",
+    "@storybook/addon-mdx-gfm": "^7.6.14",
+    "@storybook/blocks": "^7.6.14",
     "@storybook/testing-library": "^0.2.0",
-    "@storybook/vue3": "^7.6.13",
-    "@storybook/vue3-vite": "^7.6.13",
+    "@storybook/vue3": "^7.6.14",
+    "@storybook/vue3-vite": "^7.6.14",
     "@types/node": "^18.17.5",
     "@vue/test-utils": "^2.4.4",
     "happy-dom": "^13.3.8",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.6.13",
+    "storybook": "^7.6.14",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite-plugin-vuetify": "^2.0.1",
