--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "editor.formatOnSave": true,
+    // "editor.codeActionsOnSave": {
+    //     "source.fixAll": "never",
+    //     "source.fixAll.eslint": "explicit"
+    // }
 }
