--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "editor.tabSize": 2,
     "editor.formatOnSave": true,
-    // "editor.codeActionsOnSave": {
-    //     "source.fixAll": "never",
-    //     "source.fixAll.eslint": "explicit"
-    // }
+    // "[vue]": {
+    //     "editor.defaultFormatter": "Vue.volar"
+    // },
+    "editor.codeActionsOnSave": {
+        "source.fixAll": "never",
+        "source.fixAll.eslint": "explicit"
+    }
 }
