--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest",
-    "lint": "eslint --fix ."
+    "lint": "eslint .",
+    "fix": "eslint --fix ."
   },
   "husky": {
     "hooks": {
