ChatGPT用サンプルスクリプト追加

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,9 @@
 {
   "recommendations": [
-    "misterj.vue-volar-extention-pack",
     "mhutchie.git-graph",
     "donjayamanne.githistory",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "vue.volar",
+    "johnsoncodehk.vscode-typescript-vue-plugin"
   ]
 }
