--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
     "editor.tabSize": 2,
     "editor.formatOnSave": true,
-    // "[vue]": {
-    //     "editor.defaultFormatter": "Vue.volar"
-    // },
     "editor.codeActionsOnSave": {
         "source.fixAll": "never",
         "source.fixAll.eslint": "explicit"
-    }
+    },
+    "remote.autoForwardPortsFallback": 0,
+    "[vue]": {
+        "editor.defaultFormatter": "Vue.volar"
+    },
 }
